# priv-ic

./: .gitignore  Cargo.toml  dfx.json  notes.md  readme.md
backend/canisters/identity/impl/: Cargo.toml
backend/canisters/identity/impl/src/: lib.rs
backend/canisters/identity/impl/src/internet_identity/: hash.rs  hashtree.rs  mod.rs  signature_map.rs  storage.rs
backend/canisters/identity/impl/src/internet_identity/certified_map/: mod.rs
backend/canisters/identity/impl/src/lifecycle/: init.rs
backend/canisters/identity/impl/src/model/: application_map.rs  identity.rs  identity_map.rs  mod.rs
backend/canisters/identity/impl/src/queries/: app_profile.rs  ext_verification_codes.rs  mod.rs  profile.rs  visible_attributes.rs
backend/canisters/identity/impl/src/updates/: confirm_verification_code.rs  ext_remove_verification_codes.rs  mod.rs  register_application.rs  register_attribute.rs  register_phone_number.rs  remove_attribute.rs  send_verification_code.rs  set_visible_attributes.rs
backend/libraries/types/: Cargo.toml  can.did
backend/libraries/utils/: Cargo.toml
frontend/: codegen.sh  package.json  readme.md  rollup.config.js  svelte.config.js  tsconfig.json
frontend/public/: index.html  privic.webmanifest
frontend/src/: App.svelte
frontend/src/components/: Button.svelte  ClientApp.svelte  HoverIcon.svelte  Input.svelte  Loading.svelte  Login.svelte  ModalPage.svelte  NewEmailAddress.svelte  NewPhoneNumber.svelte  Profile.svelte  RegisteredAttribute.svelte  RegisteredEmailAddress.svelte  RegisteredPhoneNumber.svelte  Select.svelte
(+46 files in other folders)
