[package]
name = "identity_canister"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.0"
candid = "0.7.6"
hex = "0.4.3"
ic-cdk = { git = "https://github.com/hpeebles/cdk-rs", rev = "6f1539aac70aae9ee7f1d2c326c633b6b863721f" }
ic-cdk-macros = { git = "https://github.com/hpeebles/cdk-rs", rev = "6f1539aac70aae9ee7f1d2c326c633b6b863721f" }
identity_canister_api = { path = "../api" }
serde = "1.0.130"
serde_bytes = "0.11.5"
serde_cbor = "0.11.2"
sha2 = "0.9.6"
types = { path = "../../../libraries/types" }
utils = { path = "../../../libraries/utils" }
